--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Lobster&display=swap");
+
 :root {
 	--primary: #2f833b;
 	--dark: #1F2937;
@@ -19,10 +21,13 @@ body {
 .heading1{
     display: flex;
     justify-content: center;
-    margin-top: 8rem;
-    margin-bottom: 2rem;
+    margin-top: 2rem;
     margin-left: auto;
     margin-right: auto;
+	font-size: xx-large;
+	background: #2f833b;
+    border-radius: 1rem;
+    padding: 10px 20px;
 }
 
 .watch {
@@ -87,4 +92,44 @@ body {
 .cat img{
 	max-width: 20%;
 	border-radius: 31%;
+}
+
+.title {
+  font-size: 2.5rem;
+  font-family: "Lobster", cursive;
+}
+
+.wrapper {
+  animation: scroll 100s linear infinite;
+  /*background: url("https://images.unsplash.com/photo-1465146633011-14f8e0781093?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3450&q=80"), #111111;*/
+  background: url("https://images.unsplash.com/photo-1494491639528-85c7ab34c2f2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2670&q=80"), #111111;
+  color: #eee;
+  height: 100vh;
+  min-width: 360px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  perspective: 1000px;
+  perspective-origin: 50% 50%;
+  flex-direction: column;
+}
+
+@keyframes scroll {
+  100% {
+    background-position: 0px -400%;
+  }
+}
+
+/* Fallback if the operating system prefers reduced motion */
+@media (prefers-reduced-motion) {
+  .wrapper {
+    animation: scroll 800s linear infinite;
+  }
+}
+
+@media (min-width: 670px) {
+  .title {
+    font-size: 5rem;
+  }
 }
